# contextsqueezer

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  go.mod
.github/workflows/: ci.yml  release.yml
cmd/contextsqueeze/: e2e_test.go  main.go  main_test.go
docs/: perf.md
examples/cpp_integration/: CMakeLists.txt  main.cpp
internal/core/: signature_registry.cpp
internal/ingest/: detect.go  docx.go  fuzz_test.go  html.go  ingest.go  ingest_test.go  pdf.go  text.go
internal/ingest/fixtures/: sample.docx  sample.html  sample.txt
internal/metrics/: metrics.go
internal/pipeline/: budget.go  budget_test.go  metrics.go  pipeline.go  stream.go  stream_test.go
internal/runtime/: limits.go  log.go
internal/version/: version.go
native/: CMakeLists.txt
native/cmake/: ContextSqueezeConfig.cmake.in
native/include/: contextsqueeze.h  metrics.h
native/src/: contextsqueeze.cpp  metrics.cpp
native/test/: test_contextsqueeze.cpp
pkg/api/: fuzz_test.go  json_schema_test.go  squeeze.go  squeeze_cgo.go  squeeze_nocgo.go  squeeze_test.go
scripts/: acceptance.sh  build.sh  build_static.sh  format.sh  release.sh  sanitize.sh  test.sh  verify_no_binaries.sh
testdata/: sample.txt
testdata/bench/: boilerplate_heavy.txt  duplicate_heavy.txt  large.txt  medium.txt  mixed.html  small.txt
testdata/large/: README.md  patterns.txt
